[package]
name = "continuous-piano-roll"
version = "0.0.1"
description = "A piano roll that lets you add notes of any frequency"
authors = ["Autotel"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "fs-read-dir", "fs-write-file", "fs-read-file", "dialog-save", "dialog-open", "dialog-message", "dialog-confirm", "dialog-ask", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
