[package]
name = "continuous-piano-roll"
version = "0.0.1"
description = "A piano roll that lets you add notes of any frequency"
authors = ["Autotel"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.7.0"
fundsp = "0.15.0"
cpal = "0.15.2"
assert_no_alloc = "1.1.2"
anyhow = "1.0.71"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
